tooling/tree-sitter-w/grammar.js
    source_file: ($) =>
      choice(
        seq(
          optional($.module_header),
          repeat(
            choice(
              $.service_import_statement,
              $.domain_import_statement,
              $.kernel_import_statement,
              $.import_statement,
              $.reexport_declaration,
            ),
          ),
          repeat($._declaration),
        ),
        $.build_manifest,
      ),

    _declaration: ($) =>
      choice(
        $.export_list_declaration,
        $.function_declaration,
        $.struct_declaration,
        $.object_declaration,
        $.service_declaration,
        $.enum_declaration,
        $.protocol_declaration,
        $.type_declaration,
        $.alias_declaration,
        $.dimension_declaration,
        $.unit_declaration,
        $.extension_declaration,
        $.behavior_declaration,
        $.entry_declaration,
        $.foreign_declaration,
        $.const_declaration,
        $.test_declaration,
      ),

    _function_header: ($) =>
      seq($._function_prefix, optional($.abi_contract), $._function_tail),
    _foreign_function_header: ($) =>
      seq($._function_prefix, $.language_tag, $._function_tail),
    function_declaration: ($) =>
      choice(
        seq($._function_header, field("body", $.block)),
        seq($._foreign_function_header, field("body", $.foreign_body)),
      ),
    parameter_list: ($) => seq("(", commaSep($.parameter), optional(","), ")"),
    parameter: ($) =>
      choice(
        seq(
          "allocator",
          field("name", $.identifier),
          ":",
          optional(field("ownership", $.parameter_call_ownership)),
          field("type", $.parameter_type),
          optional(field("rest", $.rest_marker)),
          optional(seq("=", field("default", $._expression))),
        ),
        seq(
          field("name", alias("allocator", $.identifier)),
          ":",
          optional(field("ownership", $.parameter_call_ownership)),
          field("type", $.parameter_type),
          optional(field("rest", $.rest_marker)),
          optional(seq("=", field("default", $._expression))),
        ),
        seq(
          "_",
          field("name", $.identifier),
          ":",
          optional(field("ownership", $.parameter_call_ownership)),
          field("type", $.parameter_type),
          optional(field("rest", $.rest_marker)),
          optional(seq("=", field("default", $._expression))),
        ),
        seq(
          field("label", $.identifier),
          field("name", $.identifier),
          ":",
          optional(field("ownership", $.parameter_call_ownership)),
          field("type", $.parameter_type),
          optional(field("rest", $.rest_marker)),
          optional(seq("=", field("default", $._expression))),
        ),
        seq(
          field("name", $.identifier),
          ":",
          optional(field("ownership", $.parameter_call_ownership)),
          field("type", $.parameter_type),
          optional(field("rest", $.rest_marker)),
          optional(seq("=", field("default", $._expression))),
        ),
      ),
    type: ($) =>
      prec.right(
        seq(
          optional(
            field(
              "qualifier",
              choice(
                "any",
                "some",
                "shared",
                "weak",
                "ref",
                "const",
                "view",
                seq("ref", "any"),
                seq("ref", "some"),
                seq("mut", "ref"),
                seq("mut", "view"),
              ),
            ),
          ),
          $._type_core,
          repeat(seq("&", field("composition", $._type_core))),
          optional("?"),
        ),
      ),
    _type_core: ($) =>
      choice(
        seq(
          field("base", $.type_name),
          repeat($.type_arguments),
        ),
        field("base", $.tuple_type),
        field("base", $.fixed_array_type),
        field("base", $.function_type),
      ),
    type_name: ($) =>
      prec.right(seq(field("name", $._type_identifier), repeat(seq(".", field("member", $._type_identifier))))),
    _type_identifier: ($) => alias($.identifier, $.type_identifier),
    type_arguments: ($) =>
      seq(token.immediate("<"), commaSep1($.type_argument), optional(","), ">"),
    type_argument: ($) =>
      choice(
        $.contract_expression_argument,
        $.static_record_literal,
        $.static_array_literal,
        $.type,
        $.number_literal,
        $.boolean_literal,
        $.string_literal,
        $.quantity_literal,
        $.size_literal,
        $.contextual_member_expression,
        seq(
          field("label", $.identifier),
          ":",
          field("value", $.static_argument_value),
        ),
      ),
    block: ($) => seq("{", repeat($._statement), "}"),
    _statement: ($) =>
      choice(
        $.allocator_statement,
        $.binding_declaration,
        $.commit_statement,
        $.return_statement,
        $.throw_statement,
        $.defer_statement,
        $.guard_statement,
        $.if_statement,
        $.labeled_statement,
        $.while_statement,
        $.for_statement,
        $.repeat_statement,
        $.do_statement,
        $.break_statement,
        $.continue_statement,
        $.expression_statement,
        $.yield_statement,
      ),

    binding_declaration: ($) =>
      seq(
        field("kind", choice("let", "var")),
        optional(field("storage_modifier", choice("atomic", $.behavior_identifier))),
        optional(field("pattern_ownership", choice("ref", seq("mut", "ref"), seq("mut", "view")))),
        field("pattern", choice($.pattern, $.inferred_struct_pattern)),
        optional(seq(":", field("type", $.type))),
        optional(seq("=", field("value", $._expression))),
        optional(";"),
      ),
    return_statement: ($) =>
      prec.right(seq("return", optional($._expression), optional(";"))),
    throw_statement: ($) => seq("throw", $._expression, optional(";")),
    break_statement: ($) =>
      prec.right(seq("break", optional(field("label", $.identifier)), optional(";"))),
    continue_statement: ($) =>
      prec.right(seq("continue", optional(field("label", $.identifier)), optional(";"))),
    if_statement: ($) =>
      prec.right(seq("if", choice($.optional_binding, $._expression), $.block, optional(seq("else", choice($.if_statement, $.block))))),
    for_statement: ($) =>
      seq(
        "for",
        optional($._asynchronous_iteration_effects),
        optional(field("ownership", choice("ref", seq("mut", "ref"), seq("mut", "view"), "copy"))),
        field("pattern", choice($.pattern, $.inferred_struct_pattern)),
        "in",
        field("value", $._expression),
        $.block,
      ),
    switch_expression: ($) =>
      seq("switch", field("value", $._expression), "{", repeat1($.switch_case), "}"),
    switch_case: ($) =>
      seq(
        "case",
        field("pattern", $.pattern),
        optional(seq("if", field("guard", $._expression))),
        ":",
        repeat($._statement),
      ),

    do_statement: ($) => seq("do", $.block, repeat1($.catch_clause)),
    catch_clause: ($) =>
      seq(
        "catch",
        optional(
          seq(
            field("pattern", $.pattern),
            optional(seq("if", field("guard", $._expression))),
          ),
        ),
        $.block,
      ),

    expression_statement: ($) => seq($._expression, optional(";")),

    pattern: ($) =>
      choice(
        $.range_pattern,
        $.identifier,
        $.enum_pattern,
        $.struct_pattern,
        $.tuple_pattern,
        $.number_literal,
        $.string_literal,
        $.boolean_literal,
        $.quantity_literal,
        $.size_literal,
        seq("let", $.identifier),
        "_",
      ),
    range_pattern: ($) =>
      choice(
        prec(
          1,
          seq(
            field("lower", $.pattern_bound),
            field("operator", choice("...", "..<", ">..", ">..<")),
            field("upper", $.pattern_bound),
          ),
        ),
        seq(field("operator", choice("...", "..<")), field("upper", $.pattern_bound)),
        seq(field("lower", $.pattern_bound), field("operator", choice("...", ">.."))),
      ),
    enum_pattern: ($) =>
      prec.right(
        seq(
          choice(
            seq(".", field("case", $.identifier)),
            seq(
              field("enum", $._type_identifier),
              repeat(
                seq(
                  ".",
                  field("enum_member", $._type_identifier),
                ),
              ),
              ".",
              field("case", $.identifier),
            ),
          ),
          optional($.enum_payload_pattern),
        ),
      ),
    _expression: ($) =>
      choice(
        $.assignment_expression,
        $.pipe_forward_expression,
        $.task_expression,
        $.bounded_range_expression,
        $.type_query_expression,
        $.conditional_cast_expression,
        $.binary_expression,
        $.unary_expression,
        $.optional_try_expression,
        $.optional_propagation_expression,
        $.panic_expression,
        $.call_expression,
        $.generic_application_expression,
        $.member_expression,
        $.facet_expression,
        $.optional_member_expression,
        $.index_expression,
        $.closure_expression,
        $.capture_expression,
        $.pipeline_expression,
        $.stream_expression,
        $.lock_expression,
        $.unsafe_expression,
        $.if_expression,
        $.switch_expression,
        $.unit_literal,
        $.parenthesized_expression,
        $.tuple_expression,
        $.repeat_array_literal,
        $.array_literal,
        $.map_literal,
        $.contextual_member_expression,
        $.quantity_literal,
        $.unit_suffix_literal,
        $.size_literal,
        $.number_literal,
        $.string_literal,
        $.multiline_string_literal,
        $.raw_string_literal,
        $.byte_literal,
        $.boolean_literal,
        $.identifier,
      ),

    assignment_expression: ($) =>
      prec.right(
        -1,
        seq(field("left", $._expression), field("operator", choice(...ASSIGNMENT_OPERATORS)), field("right", $._expression)),
      ),

    // `|>` accepts either a free-function template or an explicitly relative
    // member template. The semantic checker owns labels, ownership, and
    // modifiers.
    bounded_range_expression: ($) =>
      prec.dynamic(
        1,
        prec.left(
          9,
          seq(
            field("lower", $._expression),
            field("operator", choice("...", "..<", ">..", ">..<")),
            field("upper", $._expression),
          ),
        ),
      ),

    binary_expression: ($) =>
      choice(
        prec.right(
          14,
          seq(field("left", $._expression), field("operator", "**"), field("right", $._expression)),
        ),
        prec.right(
          1,
          seq(field("left", $._expression), field("operator", "??"), field("right", $._expression)),
        ),
        ...BINARY_OPERATORS.map(([operator, precedence]) =>
          prec.left(
            precedence,
            seq(field("left", $._expression), field("operator", operator), field("right", $._expression)),
          ),
        ),
      ),

    unary_expression: ($) =>
      prec.right(
        13,
        seq(
          field(
            "operator",
            choice(
              "!",
              "~",
              "-",
              "try",
              "await",
              "copy",
              "take",
              "pin",
              "inout",
              "ref",
              seq("mut", "ref"),
              seq("mut", "view"),
            ),
          ),
          field("operand", $._expression),
        ),
      ),

    _asynchronous_iteration_effects: (_) => seq(optional("try"), "await"),

    panic_expression: ($) => prec(15, seq("panic", field("arguments", $.argument_list))),

    call_expression: ($) =>
      prec.left(15, seq(field("function", $._expression), field("arguments", $.argument_list))),
    argument_list: ($) => seq("(", commaSep($.argument), optional(","), ")"),
    argument: ($) =>
      seq(
        optional(seq(field("label", $.identifier), ":")),
        choice(
          seq(
            optional(field("expansion", $.argument_expansion)),
            field("value", $._mutable_object_argument),
          ),
          seq(
            optional(field("expansion", $.argument_expansion)),
            field("value", $._expression),
          ),
          field("value", $.one_sided_range_expression),
        ),
    ),
    _mutable_object_argument: ($) =>
      seq("mut", field("operand", $.identifier)),
    member_expression: ($) =>
      prec.left(
        15,
        seq(
          field("object", $._expression),
          ".",
          field("property", choice($.identifier, $.tuple_index)),
        ),
      ),
    contextual_member_expression: ($) =>
      prec(16, seq(".", field("member", $.identifier))),

    number_literal: (_) =>
      token(
        choice(
          /0[xX][0-9a-fA-F](?:_?[0-9a-fA-F])*(?:_[A-Za-z][A-Za-z0-9]*)?/,
          /0[bB][01](?:_?[01])*(?:_[A-Za-z][A-Za-z0-9]*)?/,
          /0[oO][0-7](?:_?[0-7])*(?:_[A-Za-z][A-Za-z0-9]*)?/,
          /[0-9](?:_?[0-9])*(?:\.[0-9](?:_?[0-9])*)?(?:[eE][+-]?[0-9](?:_?[0-9])*)?(?:_[A-Za-z][A-Za-z0-9]*)?/,
        ),
      ),
    // Tree-sitter keeps text and byte strings in one lexical node. Consumers
    // can inspect the `b` prefix. The compiler lexer emits distinct tokens.
    string_literal: (_) =>
      token(
        choice(
          /"([^"\\\r\n]|\\.)*"/,
          /'([^'\\\r\n]|\\.)*'/,
          /b"(?:[\x20-\x21\x23-\x5b\x5d-\x7e]|\\(?:x[0-9A-Fa-f]{2}|[\\\"nrt0]))*"/,
        ),
      ),
    boolean_literal: (_) => choice("true", "false"),

    // Exact keyword tokens win in their syntactic positions. `word` lets
    // Tree-sitter build the keyword table from this shared identifier token.
    identifier: (_) => /[A-Za-z_][A-Za-z0-9_]*/,
