tooling/tree-sitter-w/test/corpus/control_and_tasks.txt
==================
Structured tasks and ownership
==================

async fn makeCake(request: CakeRequest): Cake throws KitchenError {
  let plan = try validateCake(request)
  async let ingredients = pantry.fetch(plan.ingredients)
  let ready = try await ingredients
  spawn let cook = bake(take ready)
  return try await cook
}

---

(source_file
  (function_declaration
    name: (identifier)
    parameters: (parameter_list
      (parameter
        name: (identifier)
        type: (type
          base: (type_name
            name: (type_identifier)))))
    return_type: (type
      base: (type_name
        name: (type_identifier)))
    error_type: (type
      base: (type_name
        name: (type_identifier)))
    body: (block
      (binding_declaration
        pattern: (pattern
          (identifier))
        value: (unary_expression
          operand: (call_expression
            function: (identifier)
            arguments: (argument_list
              (argument
                value: (identifier))))))
      (binding_declaration
        pattern: (pattern
          (identifier))
        value: (call_expression
          function: (member_expression
            object: (identifier)
            property: (identifier))
          arguments: (argument_list
            (argument
              value: (member_expression
                object: (identifier)
                property: (identifier))))))
      (binding_declaration
        pattern: (pattern
          (identifier))
        value: (unary_expression
          operand: (unary_expression
            operand: (identifier))))
      (binding_declaration
        pattern: (pattern
          (identifier))
        value: (call_expression
          function: (identifier)
          arguments: (argument_list
            (argument
              value: (unary_expression
                operand: (identifier))))))
      (return_statement
        (unary_expression
          operand: (unary_expression
            operand: (identifier)))))))

==================
Switch and explicit error conversion
==================

async fn place(item: MenuItem): Receipt throws MenuError {
  switch item {
    case .cake(let request):
      return try await makeCake(request)
    case .soup(let request):
      return try await makeSoup(request)
  }
}

async fn convert(): Receipt throws MenuError {
  do {
    return try await makeOrder()
  } catch let error {
    throw .order(error)
  }
}

---

(source_file
  (function_declaration
    name: (identifier)
    parameters: (parameter_list
      (parameter
        name: (identifier)
        type: (type
          base: (type_name
            name: (type_identifier)))))
    return_type: (type
      base: (type_name
        name: (type_identifier)))
    error_type: (type
      base: (type_name
        name: (type_identifier)))
    body: (block
      (expression_statement
        (switch_expression
          value: (identifier)
          (switch_case
            pattern: (pattern
              (enum_pattern
                case: (identifier)
                (pattern
                  (identifier))))
            (return_statement
              (unary_expression
                operand: (unary_expression
                  operand: (call_expression
                    function: (identifier)
                    arguments: (argument_list
                      (argument
                        value: (identifier))))))))
          (switch_case
            pattern: (pattern
              (enum_pattern
                case: (identifier)
                (pattern
                  (identifier))))
            (return_statement
              (unary_expression
                operand: (unary_expression
                  operand: (call_expression
                    function: (identifier)
                    arguments: (argument_list
                      (argument
                        value: (identifier))))))))))))
  (function_declaration
    name: (identifier)
    parameters: (parameter_list)
    return_type: (type
      base: (type_name
        name: (type_identifier)))
    error_type: (type
      base: (type_name
        name: (type_identifier)))
    body: (block
      (do_statement
        (block
          (return_statement
            (unary_expression
              operand: (unary_expression
                operand: (call_expression
                  function: (identifier)
                  arguments: (argument_list))))))
        (catch_clause
          pattern: (pattern
            (identifier))
          (block
            (throw_statement
              (call_expression
                function: (contextual_member_expression
                  member: (identifier))
                arguments: (argument_list
                  (argument
                    value: (identifier)))))))))))

==================
Recovery keeps the following declaration
==================

fn broken(value Int): Int {
  return value
}

fn stillVisible(): Bool {
  return true
}

---

(source_file
  (function_declaration
    name: (identifier)
    parameters: (parameter_list
      (ERROR
        (identifier)
        (identifier)))
    return_type: (type
      base: (type_name
        name: (type_identifier)))
    body: (block
      (return_statement
        (identifier))))
  (function_declaration
    name: (identifier)
    parameters: (parameter_list)
    return_type: (type
      base: (type_name
        name: (type_identifier)))
    body: (block
      (return_statement
        (boolean_literal)))))

==================
Panic remains a distinct effect call
==================

fn failInvariant(): Never {
  return panic("invalid state")
}

---

(source_file
  (function_declaration
    name: (identifier)
    parameters: (parameter_list)
    return_type: (type
      base: (type_name
        name: (type_identifier)))
    body: (block
      (return_statement
        (panic_expression
          arguments: (argument_list
            (argument
              value: (string_literal))))))))

==================
Four bounded range closures
==================

fn containsRatio(value: f64): Bool {
  let closed = value in 0.0...1.0
  let upperOpen = value in 0.0..<1.0
  let lowerOpen = value in 0.0>..1.0
  let open = value in 0.0>..<1.0
  return closed && upperOpen && lowerOpen && open
}

---

(source_file
  (function_declaration
    (identifier)
    (parameter_list
      (parameter
        (identifier)
        (type
          (type_name
            (type_identifier)))))
    (type
      (type_name
        (type_identifier)))
    (block
      (binding_declaration
        (pattern
          (identifier))
        (binary_expression
          (identifier)
          (bounded_range_expression
            (number_literal)
            (number_literal))))
      (binding_declaration
        (pattern
          (identifier))
        (binary_expression
          (identifier)
          (bounded_range_expression
            (number_literal)
            (number_literal))))
      (binding_declaration
        (pattern
          (identifier))
        (binary_expression
          (identifier)
          (bounded_range_expression
            (number_literal)
            (number_literal))))
      (binding_declaration
        (pattern
          (identifier))
        (binary_expression
          (identifier)
          (bounded_range_expression
            (number_literal)
            (number_literal))))
      (return_statement
        (binary_expression
          (binary_expression
            (binary_expression
              (identifier)
              (identifier))
            (identifier))
          (identifier))))))

==================
Range patterns with if guards
==================

fn shouldAccumulate(raw: f64, error: f64): Bool {
  switch raw {
    case 0.0...1.0:
      return true
    case ..<0.0 if error > 0.0:
      return true
    case 1.0>.. if error < 0.0:
      return true
    case _:
      return false
  }
}

---

(source_file
  (function_declaration
    (identifier)
    (parameter_list
      (parameter
        (identifier)
        (type
          (type_name
            (type_identifier))))
      (parameter
        (identifier)
        (type
          (type_name
            (type_identifier)))))
    (type
      (type_name
        (type_identifier)))
    (block
      (expression_statement
        (switch_expression
          (identifier)
          (switch_case
            (pattern
              (range_pattern
                (number_literal)
                (number_literal)))
            (return_statement
              (boolean_literal)))
          (switch_case
            (pattern
              (range_pattern
                (number_literal)))
            (binary_expression
              (identifier)
              (number_literal))
            (return_statement
              (boolean_literal)))
          (switch_case
            (pattern
              (range_pattern
                (number_literal)))
            (binary_expression
              (identifier)
              (number_literal))
            (return_statement
              (boolean_literal)))
          (switch_case
            (pattern)
            (return_statement
              (boolean_literal))))))))

==================
Labeled loops and compound assignment
==================

fn fold(rows: ref Array<Array<u8>>): u32 {
  var bits: u32 = 0
  scanRows: for ref row in rows {
    for value in row {
      bits <<= 5
      bits |= value
      if value == 0 { continue scanRows }
      if value > 31 { break scanRows }
    }
  }
  return bits
}

---

(source_file
  (function_declaration
    (identifier)
    (parameter_list
      (parameter
        (identifier)
        (type
          (type_name
            (type_identifier))
          (type_arguments
            (type_argument
              (type
                (type_name
                  (type_identifier))
                (type_arguments
                  (type_argument
                    (type
                      (type_name
                        (type_identifier)))))))))))
    (type
      (type_name
        (type_identifier)))
    (block
      (binding_declaration
        (pattern
          (identifier))
        (type
          (type_name
            (type_identifier)))
        (number_literal))
      (labeled_loop_statement
        (identifier)
        (for_statement
          (pattern
            (identifier))
          (identifier)
          (block
            (for_statement
              (pattern
                (identifier))
              (identifier)
              (block
                (expression_statement
                  (assignment_expression
                    (identifier)
                    (number_literal)))
                (expression_statement
                  (assignment_expression
                    (identifier)
                    (identifier)))
                (if_statement
                  (binary_expression
                    (identifier)
                    (number_literal))
                  (block
                    (continue_statement
                      (identifier))))
                (if_statement
                  (binary_expression
                    (identifier)
                    (number_literal))
                  (block
                    (break_statement
                      (identifier)))))))))
      (return_statement
        (identifier)))))
